[gd_scene load_steps=4 format=3 uid="uid://b3dc8kuyva8ve"]

[ext_resource type="Script" uid="uid://dgskgonepefbo" path="res://scenes/ui/ui.gd" id="UIScript"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.2, 0.2, 0.2, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.5, 0.5, 0.5, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
bg_color = Color(0.2, 0.8, 0.2, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.1, 0.6, 0.1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("UIScript")

[node name="HealthBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 20.0
offset_right = 1124.0
offset_bottom = 36.0
theme_override_styles/background = SubResource("StyleBoxFlat_1")
theme_override_styles/fill = SubResource("StyleBoxFlat_2")
max_value = 200.0
value = 200.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="HealthBar"]
layout_mode = 0
offset_left = 8.0
offset_top = 7.0
offset_right = 148.0
offset_bottom = 31.0
text = "200/200 HP"

[node name="KillCounterLabel" type="Label" parent="HealthBar"]
layout_mode = 0
offset_left = 943.0
offset_top = 19.0
offset_right = 1067.0
offset_bottom = 43.0
text = "KILLS: 0"
horizontal_alignment = 2

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 50.0
offset_right = 250.0
offset_bottom = 74.0
text = "SCORE: 0"
